front/src/styles/styles.scss
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0px;
  padding: 0px;
  text-decoration: none;
  list-style: none;
}

$mainpurple-color: #7763C5;
$error-color: #A40F0F;

html, body { 
  height: fit-content;
  min-height: 100vh; 
  font-family: "Inter", sans-serif;
  background-color: white;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  overflow-y: scroll;
  display: flex;
  flex-direction: column;
  margin: 0; 
  font-family: "Inter", sans-serif;
}

main {
  max-width: 1440px;
  background-color: white; 
  margin: 0 auto;
  min-height: 100vh;
}

header{
  background-color: white; 
  margin: 0 auto;
}

h1{
  font-size: 24px;
  font-weight: 500;
}

input,
button,
textarea,
select {
  font-family: "Inter", sans-serif;
}

button{
  font-weight: 600;
  font-size: 16px;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

.errorColor{
  color: $error-color;
}

